<resources>
    <string name="app_name" translatable="false">PayMark</string>
    <string name="add_record">ADD Record</string>
    <string name="month_out">Expenses in month</string>
    <string name="out">Expenses</string>
    <string name="month_in">Income in month</string>
    <string name="in">Income</string>
    <string name="budget">Budget Remaining</string>
    <string name="set_budget">Set Budget</string>
    <string name="see_excel">View Analysis</string>
    <string name="add_remark">Add remarks</string>
    <string name="remark">Remarks</string>
    <string name="ensure">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="history_record">Billing record</string>
    <string name="account_info">Bill details</string>
    <string name="please_input_time">Please enter the time (24-hour format)</string>
    <string name="please_search_info">Please enter search information</string>
    <string name="date_empty">The data is empty, there is no such record~~</string>
    <string name="chart_info">Bill details</string>
    <string name="about_appinfo">About us</string>
    <string name="about_version">version</string>
    <string name="about_1" translatable="false">5.3.4</string>
    <string name="about_app">About App</string>
    <string name="about_project">Project</string>
    <string name="member">Member</string>
    <string name="history_info">This month’s bill record</string>
    <string name="clear_all">Clear all records</string>
    <string name="not_data">No data</string>
    <string name="members" translatable="false">CHANG Wing Sze \nLAU Cho Cheuk \nLEE Ho Fung </string>
    <string name="today_expense_income">Today’s expenses: $0 Income: $0</string>
    <string name="ex_type">other</string>
    <string name="ex_percent">27%</string>
    <string name="ex_expense">$27.6</string>
    <string name="ex_comment">comment</string>
    <string name="ex_time">today 18:10</string>
    <string name="Notice">Notice</string>
    <string name="are_you_sure">Are you sure you want to delete this record?</string>
    <string name="type_other">Other</string>
    <string name="type_food">Food</string>
    <string name="type_transport">Transport</string>
    <string name="tips">Tips</string>
    <string name="type_shopping">Shopping</string>
    <string name="type_clothing">Clothing</string>
    <string name="type_daily">Daily Necessities</string>
    <string name="type_entertainment">Entertainment</string>
    <string name="type_education">Education</string>
    <string name="type_medical">Medical</string>
    <string name="type_tenement">Tenement</string>
    <string name="type_salary">Salary</string>
    <string name="type_interest">Interest</string>
    <string name="type_invest">Invest</string>
    <string name="type_trade">Trade</string>
    <string name="ex_date_time">1/1/2011 11:11</string>
    <string name="add_comment">Add Comment</string>
    <string name="ex_income_month">Total x income, $111</string>
    <string name="ex_expenditure_month">A total of 1 expenditure, $27.6</string>
    <string name="ex_bill_month">November 2011 bill</string>
    <string name="ask_sure">Are you sure you want to delete all records?\nNote: Deletion cannot be restored, please choose carefully!</string>
    <string name="deleted">successfully deleted!</string>
    <string name="cannot_empty">The input content cannot be empty!</string>
    <string name="year">Year: </string>
    <string name="month">" Month: "</string>
    <string name="bill"> Bill</string>
    <string name="total">A total of </string>
    <string name="total2">expenditure, $</string>
    <string name="total3"> expenditure, $</string>
    <string name="budget_more_than_0">Budget amount must be greater than 0</string>
    <string name="key_del">DEL</string>
    <string name="key_clear">Clear</string>
    <string name="ex_date">11/2011</string>
    <string name="ex_year">2011</string>
    <string name="today_expenses">Today’s expenses: $</string>
    <string name="income_main">"  Income: $"</string>
    <string name="go_web">Go to our website</string>
</resources>
