<?xml version="1.0" encoding="utf-8"?>
<!-- This is the root layout for the Comment Dialog. It is a RelativeLayout. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">

    <!-- This TextView displays the title of the dialog. -->
    <TextView
        android:id="@+id/dialog_comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- This EditText is used to input the comment. -->
    <EditText
        android:id="@+id/dialog_comment_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_comment_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="@string/remark"
        android:textSize="14sp">

        <requestFocus />
    </EditText>

    <!-- This LinearLayout contains two buttons for canceling and confirming the comment. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_comment_et"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- This Button acts as a cancel button for the dialog. -->
        <Button
            android:id="@+id/dialog_comment_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/green_006400"
            android:textStyle="bold" />

        <!-- This Button acts as a confirmation button for the dialog. -->
        <Button
            android:id="@+id/dialog_comment_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>