<?xml version="1.0" encoding="utf-8"?>
<!-- This is the root layout for the Month Chart activity. It is a vertical LinearLayout. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3"
    android:orientation="vertical">

    <!-- This RelativeLayout contains the back button, the title of the activity, and a calendar button. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <!-- This is the back button. When clicked, it triggers the onClick method. -->
        <ImageView
            android:id="@+id/chart_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:onClick="onClick"
            android:src="@mipmap/it_back" />

        <!-- This is the title of the activity. It is centered in the parent layout. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/chart_info"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- This is the calendar button. When clicked, it triggers the onClick method. -->
        <ImageView
            android:id="@+id/chart_iv_rili"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:onClick="onClick"
            android:src="@mipmap/it_cal" />
    </RelativeLayout>

    <!-- This LinearLayout contains the date and financial information. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- This TextView displays the date. -->
        <TextView
            android:id="@+id/chart_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_bill_month"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- This TextView displays the expenditure for the month. -->
        <TextView
            android:id="@+id/chart_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ex_expenditure_month"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <!-- This TextView displays the income for the month. -->
        <TextView
            android:id="@+id/chart_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ex_income_month"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- This LinearLayout contains the buttons for displaying expenditure and income charts. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- This Button displays the expenditure chart when clicked. -->
        <Button
            android:id="@+id/chart_btn_out"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:onClick="onClick"
            android:text="@string/out"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <!-- This Button displays the income chart when clicked. -->
        <Button
            android:id="@+id/chart_btn_in"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:onClick="onClick"
            android:text="@string/in"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- This ViewPager displays the charts. -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/chart_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>